<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Elendheim Capture</string>
    <string name="take_photo">Take Photo</string>
    <string name="flip_camera">Flip</string>
    <string name="flash_off">Flash: Off</string>
    <string name="flash_on">Flash: On</string>
    <string name="flash_auto">Flash: Auto</string>
    <string name="photo_saved">Photo saved</string>
    <string name="photo_failed">Could not save photo</string>
    <string name="camera_start_failed">Could not start the camera</string>
    <string name="lens_unavailable">That lens is not available</string>
    <string name="camera_permission_needed">Camera permission is required to take photos</string>
    <string name="mode_photo">Photo</string>
    <string name="mode_video">Video</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="video_saved">Video saved</string>
    <string name="video_failed">Could not save video</string>
    <string name="light_on">Light: On</string>
    <string name="light_off">Light: Off</string>
    <string name="settings">Settings</string>
    <string name="fps_30">30 fps</string>
    <string name="fps_60">60 fps</string>
</resources>
